--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="contenedor">
-      <h1 id="tituloPagina">Animalito colombiano (Oráculo)</h1>
+      <h1 id="tituloPagina">Princesa de Disney(Oráculo)</h1>
 
       <img id="foto" src="" />
 
